MOre spacing and sizing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -2956,18 +2956,32 @@ footer[role="contentinfo"] {
   }
 }
 
-/* line 172, ../sass/partials/_lists.scss */
+/* Tablets and phablets */
+@media only screen and (max-width: 767px) {
+  /* line 173, ../sass/partials/_lists.scss */
+  .brandPrecept + .brandPrecept {
+    margin-top: 40px;
+  }
+}
+/* line 178, ../sass/partials/_lists.scss */
 .preceptIcon {
   max-width: 96px;
   margin-bottom: 20px;
+  /* Tablets and phablets */
+}
+@media only screen and (max-width: 767px) {
+  /* line 178, ../sass/partials/_lists.scss */
+  .preceptIcon {
+    max-width: 64px;
+  }
 }
 
-/* line 177, ../sass/partials/_lists.scss */
+/* line 187, ../sass/partials/_lists.scss */
 .preceptInfo {
   color: #555555;
 }
 
-/* line 181, ../sass/partials/_lists.scss */
+/* line 191, ../sass/partials/_lists.scss */
 .section_divider_hr {
   display: block;
   width: 100%;
@@ -2975,7 +2989,7 @@ footer[role="contentinfo"] {
   margin: 50px 0 70px;
 }
 
-/* line 189, ../sass/partials/_lists.scss */
+/* line 199, ../sass/partials/_lists.scss */
 .logo_grid {
   display: grid;
   display: -webkit-box;
@@ -2989,13 +3003,13 @@ footer[role="contentinfo"] {
   padding-top: 30px;
 }
 
-/* line 198, ../sass/partials/_lists.scss */
+/* line 208, ../sass/partials/_lists.scss */
 .logo_item {
   text-align: center;
   padding-top: 15px;
   padding-bottom: 15px;
 }
-/* line 203, ../sass/partials/_lists.scss */
+/* line 213, ../sass/partials/_lists.scss */
 .logo_item img {
   display: inline-block;
   max-height: 56px;
@@ -3003,12 +3017,12 @@ footer[role="contentinfo"] {
   /* Tablets and phablets */
 }
 @media only screen and (min-width: 768px) {
-  /* line 203, ../sass/partials/_lists.scss */
+  /* line 213, ../sass/partials/_lists.scss */
   .logo_item img {
     max-height: 64px;
   }
 }
-/* line 213, ../sass/partials/_lists.scss */
+/* line 223, ../sass/partials/_lists.scss */
 .logo_item + .logo_item {
   margin-left: 40px;
 }
